# factorio-blueprints

./: .gitignore  CHANGELOG.md  README.md  factorio-blueprints.cabal  flake.nix
data/: dectorio.csv
exec/: Main.hs
internals/Codec/Factorio/: Internal.hs
source/Codec/: Factorio.hs
source/Codec/Factorio/: Base.hs  Dectorio.hs  Helpers.hs  Internal.hs  Krastorio.hs  Vanilla.hs
test/: Spec.hs
