cabal-version: 3.0
name: factorio-blueprints
version: 0.1.0.0
synopsis: Converts images into pixel-art blueprints for the game Factorio
license: BSD-3-Clause
license-file: LICENSE
author: Lawrence Bell
build-type: Simple

extra-doc-files:
    , CHANGELOG.md
    , README.md

common warnings
    ghc-options: -Wall

common language-options
    default-language: Haskell2010
    default-extensions:
        , ImportQualifiedPost
        , LambdaCase

library
    import: warnings, language-options
    exposed-modules:
        , Codec.Factorio
        , Codec.Factorio.Vanilla
    other-modules:
        , Codec.Factorio.Helpers
    build-depends:
        , aeson ^>= 2.1.2
        , aeson-pretty ^>= 0.8.10
        , base ^>= 4.17.2
        , base64 ^>= 0.4.2
        , bytestring ^>= 0.11.5
        , JuicyPixels ^>= 3.3.8
        , lens ^>= 5.2.3
        , lens-aeson ^>= 1.2.3
        , text ^>= 2.0.2
        , zlib ^>= 0.6.3
    hs-source-dirs: source

test-suite tests
    import: warnings, language-options
    build-depends:
        , base
        , factorio-blueprints
        , QuickCheck ^>= 2.14.3
        , tasty ^>= 1.5
        , tasty-hunit ^>= 0.10.1
        , tasty-quickcheck ^>= 0.10.3
    main-is: Spec.hs
    type: exitcode-stdio-1.0
    hs-source-dirs: test

executable blueprints
    import: warnings, language-options
    build-depends:
        , aeson
        , aeson-pretty
        , base
        , bytestring
        , factorio-blueprints
        , file-io ^>= 0.1.0
        , filepath ^>= 1.4.100
        , JuicyPixels
        , optparse-applicative ^>= 0.18.1
        , text
    main-is: Main.hs
    hs-source-dirs: exec
