cabal-version: 3.0
name: factorio-blueprints
version: 0.1.0.0
synopsis: Converts images into pixel-art blueprints for the game Factorio
license: BSD-3-Clause
license-file: LICENSE
author: Lawrence Bell
build-type: Simple

extra-doc-files:
    , CHANGELOG.md
    , README.md
    , data/original.png
    , data/out-base.png
    , data/out-kras.png
    , data/out-dect.png
    , data/out-dect-no-dither.png
    , data/ingame-player.png
    , data/ingame-minimap.png

data-files:
    , data/dectorio.csv

common warnings
    ghc-options: -Wall

common language-options
    default-language: Haskell2010
    default-extensions:
        , ImportQualifiedPost
        , LambdaCase

library
    import: warnings, language-options
    exposed-modules:
        , Codec.Factorio
        , Codec.Factorio.Base
        , Codec.Factorio.Dectorio
        , Codec.Factorio.Krastorio
    build-depends:
        , aeson ^>= 2.1.2
        , aeson-pretty ^>= 0.8.10
        , base ^>= 4.17.2
        , base64 ^>= 0.4.2
        , containers ^>= 0.6.7
        , internals
        , JuicyPixels ^>= 3.3.8
        , matrix ^>= 0.3.6
        , text ^>= 2.0.2
        , zlib ^>= 0.6.3
    hs-source-dirs: source

library internals
    import: warnings, language-options
    exposed-modules:
        , Codec.Factorio.Internal
    other-modules:
        , Paths_factorio_blueprints
    build-depends:
        , base
        , bytestring ^>= 0.11.5
        , cassava ^>= 0.5.3
        , containers
        , file-io ^>= 0.1.0
        , filepath ^>= 1.4.100
        , JuicyPixels
        , matrix
        , primitive ^>= 0.7.4
        , template-haskell ^>= 2.19.0
        , text
        , vector ^>= 0.13.0
        , zlib
    hs-source-dirs: internals

test-suite tests
    import: warnings, language-options
    build-depends:
        , base
        , factorio-blueprints
        , internals
        , JuicyPixels
        , QuickCheck ^>= 2.14.3
        , string-interpolate ^>= 0.3.2
        , tasty ^>= 1.5
        , tasty-hunit ^>= 0.10.1
        , tasty-quickcheck ^>= 0.10.3
    main-is: Spec.hs
    type: exitcode-stdio-1.0
    hs-source-dirs: test

executable blueprints
    import: warnings, language-options
    build-depends:
        , aeson
        , aeson-pretty
        , base
        , bytestring
        , factorio-blueprints
        , file-io
        , filepath
        , JuicyPixels
        , JuicyPixels-extra ^>= 0.6.0
        , optparse-applicative ^>= 0.18.1
        , string-interpolate
        , text
    main-is: Main.hs
    hs-source-dirs: exec
