cabal-version: 3.0
name: factorio-blueprints
version: 0.1.0.0
synopsis: Converts images into pixel-art blueprints for the game Factorio
license: BSD-3-Clause
license-file: LICENSE
author: Lawrence Bell
build-type: Simple

extra-doc-files:
    , CHANGELOG.md
    , README.md
    , data/original.png
    , data/out-base.png
    , data/out-kras.png
    , data/out-dect.png
    , data/out-dect-no-dither.png
    , data/ingame-player.png
    , data/ingame-minimap.png

data-files:
    , data/dectorio.csv

common warnings
    ghc-options: -Wall

common language-options
    default-language: Haskell2010
    default-extensions:
        , ImportQualifiedPost
        , LambdaCase

library
    import: warnings, language-options
    exposed-modules:
        , Codec.Factorio
        , Codec.Factorio.Base
        , Codec.Factorio.Dectorio
        , Codec.Factorio.Krastorio
        , Codec.Factorio.Internal
    other-modules:
        , Paths_factorio_blueprints
    build-depends:
        , aeson ^>= 2.1.2
        , aeson-pretty ^>= 0.8.9
        , base ^>= 4.17.2
        , base64 ^>= 0.4.2
        , bytestring ^>= 0.11.5
        , cassava ^>= 0.5.3
        , containers ^>= 0.6.7
        , filepath ^>= 1.4.2
        , JuicyPixels ^>= 3.3.8
        , matrix ^>= 0.3.6
        , primitive ^>= 0.8.0
        , template-haskell ^>= 2.19.0
        , text ^>= 2.0.2
        , vector ^>= 0.13.0
        , zlib ^>= 0.6.3
    hs-source-dirs: source

test-suite tests
    import: warnings, language-options
    build-depends:
        , base
        , factorio-blueprints
        , JuicyPixels
        , QuickCheck ^>= 2.14.3
        , string-interpolate ^>= 0.3.2
        , tasty ^>= 1.4.3
        , tasty-hunit ^>= 0.10.1
        , tasty-quickcheck ^>= 0.10.2
    main-is: Spec.hs
    type: exitcode-stdio-1.0
    hs-source-dirs: test

executable blueprints
    import: warnings, language-options
    build-depends:
        , aeson
        , aeson-pretty
        , base
        , bytestring
        , factorio-blueprints
        , filepath
        , JuicyPixels
        , JuicyPixels-extra ^>= 0.6.0
        , optparse-applicative ^>= 0.17.1
        , string-interpolate
        , text
    main-is: Main.hs
    hs-source-dirs: exec
